--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
